correct error in home comp

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row carousel-holder">
   <div class="col-md-12">
-    <nga-carousel></nga-carousel>
+    <ng-auct-carousel></ng-auct-carousel>
   </div>
 </div>
 <div class="row">
