--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,5 +4,5 @@
   </div>
 </div>
 <div class="row">
-  We'll render several ProductItem components here
+  <ng-auct-product-item></ng-auct-product-item>
 </div>
