--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -1,3 +1,13 @@
-<div class='thumbnail'>
-  
+<div class="thumbnail">
+  <img src="http://placehold.it/320X150">
+  <div class="caption">
+    <h4 class="float-right">{{product.price | currency}}</h4>
+    <h4>
+      <a [routerLink]="['/products',product.id]">{{product.title}}</a>
+    </h4>
+    <p>{{product.description}}</p>
+  </div>
+  <!--<div class="ratings">
+    <ng-auct-stars [rating]="product.rating"></ng-auct-stars>
+  </div>-->
 </div>
